crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-12.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/pwsh-script.yml\")).run()?"
---
error[template-injection]: code injection via template expansion
  --> @@INPUT@@:15:11
   |
15 |           script: |
   |           ^^^^^^ this code block
16 |             Write-ActionDebug "Running for pull request ${{ github.event.pull_request.title }}"
   |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

2 findings (1 suppressed): 0 unknown, 0 informational, 0 low, 0 medium, 1 high
